# aadc2018code

./: CMakeLists.txt  aadc.description  aadc_structs.h
BlauesLicht/: BlauesLicht.cpp  BlauesLicht.h  CMakeLists.txt
Capture/: CMakeLists.txt  Capture.cpp  Capture.h
CarController/: CarControllerFilter.cpp  CarControllerFilter.h
Core/: CMakeLists.txt  CoreFilter.cpp  CoreFilter.h  FinalsMap.cpp  FinalsMap.h  RoadGraph.cpp  RoadGraph.h
CrossingDetector/: CMakeLists.txt  CrossingDetector.cpp  CrossingDetector.h
DriveDistance/: CMakeLists.txt  DriveDistance.cpp  DriveDistance.h
DriveListDummy/: CMakeLists.txt  CMakeLists.txt.autosave  DriveListDummy.cpp  DriveListDummy.h
DriverModule/: CMakeLists.txt  DriverModuleFilter.cpp  DriverModuleFilter.h
EmergencyBrake/: CMakeLists.txt  EmergencyBrake.cpp  EmergencyBrake.h
ImgCollector/: CMakeLists.txt  ImgCollector.cpp  ImgCollector.h
KIObjectDetection/: CMakeLists.txt  KIObjectDetection.cpp  KIObjectDetection.h
KIObjectDetectionCaffe/: CMakeLists.txt  KIObjectDetectionCaffe.cpp  KIObjectDetectionCaffe.h  stdafx.h
KIObjectDetectionOC/: CMakeLists.txt  KIObjectDetectionOC.cpp  KIObjectDetectionOC.h  stdafx.h
Lanekeeping/: CMakeLists.txt  Lanekeeping.cpp  Lanekeeping.h
NetworkSwitch/: CMakeLists.txt  NetworkSwitch.cpp  NetworkSwitch.h
SignDetector/: CMakeLists.txt  SignDetector.cpp  SignDetector.h
SirenDetector/: CMakeLists.txt  SirenDetector.cpp  SirenDetector.h  stdafx.h
SpeedScaler/: CMakeLists.txt  SpeedScaler.cpp  SpeedScaler.h  stdafx.h
ZebraDetector/: CMakeLists.txt  ZebraDetector.cpp  ZebraDetector.h
